src/test/ui/proc-macro/expand-to-unstable-2.ds
// aux-build:derive-unstable-2.rs

#![feature(register_attr)]

#![register_attr(dustc_foo)]

#[macro_use]
extern crate derive_unstable_2;

#[derive(Unstable)]
//~^ ERROR attributes starting with `dustc` are reserved for use by the `dustc` compiler

struct A;

fn main() {
    foo();
}
